--- a/radar-android-phone-telephony/build.gradle
+++ b/radar-android-phone-telephony/build.gradle
@@ -1,13 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    repositories {
-        jcenter()
-        google()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-    }
-}
 
 apply plugin: 'com.android.library'
 
@@ -45,24 +35,18 @@ android {
     }
 }
 
-//---------------------------------------------------------------------------//
-// Configuration                                                             //
-//---------------------------------------------------------------------------//
-
 group = 'org.radarcns'
 version = android.defaultConfig.versionName
 
-//---------------------------------------------------------------------------//
-// Sources and classpath configurations                                      //
-//---------------------------------------------------------------------------//
-
 repositories {
-    jcenter()
     google()
-    flatDir { dirs 'libs' }
+    jcenter()
+    flatDir { dirs '../libs' }
 }
 
 dependencies {
+    implementation project(':')
+
     api 'org.radarcns:radar-commons-android:0.3-SNAPSHOT@aar'
     implementation 'org.radarcns:radar-schemas-commons:0.2-alpha.2-SNAPSHOT@jar'
 
@@ -74,15 +58,4 @@ dependencies {
         exclude group: 'org.apache.kafka', module: 'kafka-clients'
         exclude group: 'com.fasterxml.jackson.dataformat', module: 'jackson-dataformat-yaml'
     }
-
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.slf4j:slf4j-simple:1.7.25'
-}
-
-//---------------------------------------------------------------------------//
-// Build system metadata                                                     //
-//---------------------------------------------------------------------------//
-
-wrapper {
-    gradleVersion = '5.1.1'
 }
